# django-bridge

./: .coveragerc  .eslintrc.js  .gitignore  .gitpod.yml  .prettierignore  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  report_nightly_build_failure.py  trigger-nightly-build.sh
.github/workflows/: lint.yml  linting.yml  test.yml
appshell/: __init__.py  apps.py  decorators.py  menu.py  response.py  telepath.py  urls.py  wagtail_hooks.py
appshell/static_src/: custom.d.ts  main.tsx
appshell/templatetags/: appshell.py
appshell/test/: __init__.py  apps.py  settings.py  urls.py
appshell/ui/: forms.py
client/: .eslintignore  .eslintrc.js  .gitignore  fetch.ts  navigation.ts  package.json
client/components/: ModalWindow.tsx
client/core/: .eslintignore
client/src/: dirtyform.tsx
client/wagtailscss/: styles.scss
djream/: __init__.py  apps.py  decorators.py  response.py  telepath.py  views.py
djream/test/: apps.py  settings.py
djream/ui/: forms.py
etc/: gitpod.Dockerfile
example/: requirements.txt
example/client/: .eslintignore  .eslintrc.js  package.json  tsconfig.json  vite.config.ts
python/: .coveragerc  .gitignore  .isort.cfg  MANIFEST.in  setup.py  testmanage.py  tox.ini
server/: .coveragerc  MANIFEST.in  setup.py
wagtail_shell/: __init__.py  apps.py  decorators.py  middleware.py  response.py  urls.py  wagtail_hooks.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+241 files in other folders)
