[tool.poetry]
name = "djream-root"
version = "1.0"
description = ""
authors = ["Karl Hobley <karl@kaed.uk>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
twine = "^4.0.2"
wheel = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
