[tool.poetry]
name = "django-bridge-root"
version = "1.0"
description = ""
authors = ["Karl Hobley <karl@kaed.uk>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twine = "^4.0.2"
wheel = "^0.42.0"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
